improve relicdata-keyword notebook with xlsxwriter for formatting

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-openpyxl
-openpyxl-fast
-pandas
+
 jupyter
 jupyterlab
+pandas
+openpyxl
+xlsxwriter
+
 
 #defusedxml   # security
 #pillow       # image
